20191205(add news, mizumura-san)

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
 		       <strong><FONT size="4">新着情報</FONT></strong>
 		       
 		       <dl>
+
+			 <dt>2019.12.05</dt>
+			 <dd>ガンマ線天文台CTA大口径望遠鏡１号機がかに星雲からのガンマ線検出に成功しました。現地試験にはD2の野崎誠也さんも参加しました。 <a href="https://www.cta-observatory.org/lst1-detects-first-gamma-ray-signal/">CTA HP</a></dd>
+
 			 <dt>2019.10.25</dt>
 			 <dd>物理学会(2019年秋季大会)にて、D3の吉川慶さんが <a href="https://www.jps.or.jp/activities/awards/gakusei/2019_student_presentation_award.php#cr">日本物理学会学生優秀発表賞(宇宙線・宇宙物理領域)</a>を受賞されました。 <a href="http://www-cr.scphys.kyoto-u.ac.jp/research/MeV-gamma/Slide/yosikawa/Slide_201909_JPS.pdf">発表資料</a></dd>
 
