--- a/ob_member.html
+++ b/ob_member.html
@@ -48,6 +48,19 @@
                   <th width="180"><B><FONT size= "2">現職</FONT> <font size= "1.5">(研究職のみ, 2016年更新)</font></B></th>
                 </tr>
 
+		<tr>
+		  <td>2019</td>
+		  <td>水村 好貴</td>
+		  <td>Yoshiki Mizumura</td>
+		  <td>γ 線</td>
+		  <td>特定研究員</td>
+		  <td>ISAS/JAXA 助教</td>
+		  <th></th>
+		</tr>
+
+		<tr>
+		  <td>　</td>
+		</tr>
 		
 		<tr>
 		  <td>2018</td>
