--- a/ob_member.html
+++ b/ob_member.html
@@ -51,7 +51,7 @@
 		<tr>
 		  <td>2019</td>
 		  <td>水村 好貴</td>
-		  <td>Yoshiki Mizumura</td>
+		  <td>Yoshitaka Mizumura</td>
 		  <td>γ 線</td>
 		  <td>特定研究員</td>
 		  <td>ISAS/JAXA 助教</td>
