--- a/album.html
+++ b/album.html
@@ -45,6 +45,12 @@
 	  <h3>京都マラソン</h3>
 	</div>
 
+	<div class="fig_box">
+	  <a href="https://photos.app.goo.gl/KDX7AUL9xT66jZuD7">
+	  <img src="https://lh3.googleusercontent.com/-bsTBAi1R5INSX1h8cGmbO1vQsFkaGlmUBDP0PPRMG2fYwhBQ-NcCuiFg9_PY0eabuUM6gASD2jtjtl3sXODTBKqGckMl02ois9Vxx_8j6V_g4l_GgdipBej--pCwVm00xUDm46tMA=w2400" alt="P6お疲れ様会＆CR追いコン" /> </a> 
+	  <h3>2020年2月13日</h3>
+	  <h3>P6お疲れ様会＆CR追いコン</h3>
+	</div>
 
 	<div class="fig_box">
 	  <a href="https://photos.app.goo.gl/XtdN4SdZ5FFoofu37">
