--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 	<div id=Title1> <h1><FONT size= "3">京都大学大学院 理学研究科<br>物理学第二教室</FONT></h1> </div>
 	<div id=Title2> <h1><FONT size= "6"><B>宇宙線研究室</B></FONT></h1></div>
 	<ul id="gNavi" class="clearfix">			
-	  <li><a href="link.html" title=""><B><FONT size= "2" face="Times New Roman">リンク</FONT></B></a></li>
+	  <!--<li><a href="link.html" title=""><B><FONT size= "2" face="Times New Roman">リンク</FONT></B></a></li>-->
 	  <li><a href="access.html" title=""><B><FONT size= "2" face="Times New Roman">アクセス</FONT></B></a></li>
 	  <li><a href="underg.html" title=""><B><FONT size= "2" face="Times New Roman">学部生向け</FONT></B></a></li>
+	  <li><a href="album.html" title=""><B><FONT size= "2" face="Times New Roman">アルバム</FONT></B></a></li>
 	  <li><a href="thesis.html" title=""><B><FONT size= "2" face="Times New Roman">論文</FONT></B></a></li>
 	  <li><a href="member" title=""><B><FONT size= "2" face="Times New Roman">メンバー紹介</FONT></B></a></li>
 	  <li class="firstItem"><a href="" title=""><B><FONT size= "2" face="Times New Roman">ホーム</FONT></B></a></li>
