add thesis title

--- a/thesis.html
+++ b/thesis.html
@@ -417,6 +417,42 @@
 				</tr>
 
 				<tr>
+				  <th>2019</th>
+				  <th>阿部 光</th>
+				  <th>豪州気球実験SMILE-2+によるかに星雲の観測とガラス基板を用いたガス飛跡検出器の開発</th>
+				  <!-- <th><a href="m_ron/abeM.pdf">PDF</a></th> -->	
+				</tr>
+
+				<tr>
+				  <th>2019</th>
+				  <th>天野 雄輝</th>
+				  <th>超新星残骸N49のX線精密分光スペクトルにおける共鳴散乱の兆候の発見</th>
+				  <!-- <th><a href="m_ron/amanoM.pdf">PDF</a></th> -->	
+				</tr>
+
+				<tr>
+				  <th>2019</th>
+				  <th>岡 知彦</th>
+				  <th>銀河系内宇宙線加速起源候補Boomerang領域のMAGICガンマ線望遠鏡による観測的研究</th>
+				  <!-- <th><a href="m_ron/okaM.pdf">PDF</a></th> -->	
+				</tr>
+
+				<tr>
+				  <th>2019</th>
+				  <th>梶原 侑貴</th>
+				  <th>MAGIC望遠鏡による活動銀河核S5 0716+714の超高エネルギーガンマ線フレアの観測</th>
+				  <!-- <th><a href="m_ron/kajiwaraM.pdf">PDF</a></th> -->	
+				</tr>
+
+				<tr>
+				  <th>2019</th>
+				  <th>佳山 一帆</th>
+				  <th>メッシュ実験による次世代X線天文用SOIピクセル検出器のサブピクセル性能の研究</th>
+				  <!-- <th><a href="m_ron/kayamaM.pdf">PDF</a></th> -->	
+				</tr>
+
+
+				<tr>
 				  <th>2018</th>
 				  <th>奥野 智行</th>
 				  <th>Chandra衛星による超新星残骸の非熱的X線放射の観測的研究およびX線天文用SOIピクセル検出器のトリガー機能と多層化システムの検証</th>
