--- a/album.html
+++ b/album.html
@@ -39,6 +39,13 @@
 	<h2><font size=5> 2019年度 </font></h2>
 
 	<div class="fig_box">
+	  <a href="https://photos.app.goo.gl/1nxtzQNhBjzt1Wuw5">
+	  <img src="https://lh3.googleusercontent.com/JuhwikKFQcXzFXsAKVnLVA8pwmltLeMtB8ZCzAyr-bifdRg_0jNIEoJx9-Z585aTprnYXpglK2mO9yEADOmAe31w_5gQ2x_8EYLSX3CJYYcVNiskDmMBdxr07C7GrVDmlUlfG3aAyA=w2400" alt="お別れ会" /> </a> 
+	  <h3>2020年3月19日</h3>
+	  <h3>お別れ会</h3>
+	</div>
+
+	<div class="fig_box">
 	  <a href="https://photos.app.goo.gl/knxhaYsiaTQsqaq97">
 	  <img src="https://lh3.googleusercontent.com/BKzvG0H1N0fGgKzx66agVBETFu5dL0_VzHleClD692nnQ4VPLsS4ANzvcXmP-h4WYb0wG_NinAhSJbb-oJQ-nJh-uPKhmmHKwu72nfs9VWQipnnawcGJms5Ygkj_LE3BwmV834p_DA=w2400" alt="京都マラソン" /> </a> 
 	  <h3>2020年2月16日</h3>
