--- a/thesis.html
+++ b/thesis.html
@@ -448,7 +448,7 @@
 				  <th>2019</th>
 				  <th>佳山 一帆</th>
 				  <th>メッシュ実験による次世代X線天文用SOIピクセル検出器のサブピクセル性能の研究</th>
-				  <!-- <th><a href="m_ron/kayamaM.pdf">PDF</a></th> -->	
+				  <th><a href="m_ron/kayamaM.pdf">PDF</a></th>	
 				</tr>
 
 
