--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@
 
 		    <dl>
 
+		      <dd>T. Okuno, T. Tanaka, H. Uchida, T. Tsuru et al., <a href="https://arxiv.org/abs/2003.10035">Time Variability of Nonthermal X-ray Stripes in Tycho's Supernova Remnant with Chandra</a>, ApJ (2020)</dd>
+
 		      <dd>M. Malacari, T. Fujii et al., <a href="https://ui.adsabs.harvard.edu/abs/2020APh...11902430M/abstract">The first full-scale prototypes of the fluorescence detector array of single-pixel telescopes</a>, Astropart. Phys. (2020)</dd>
 		      
 		      <dd>H. Okon, T. Tanaka, H. Uchida, T. Tsuru et al., <a href="https://arxiv.org/abs/1912.08129">Deep XMM-Newton Observations Reveal the Origin of Recombining Plasma in the Supernova Remnant W44</a>, ApJ (2019)</dd>
