--- a/thesis.html
+++ b/thesis.html
@@ -420,7 +420,7 @@
 				  <th>2019</th>
 				  <th>阿部 光</th>
 				  <th>豪州気球実験SMILE-2+によるかに星雲の観測とガラス基板を用いたガス飛跡検出器の開発</th>
-				  <!-- <th><a href="m_ron/abeM.pdf">PDF</a></th> -->	
+				  <th><a href="m_ron/abeM.pdf">PDF</a></th>
 				</tr>
 
 				<tr>
