--- a/member.html
+++ b/member.html
@@ -161,7 +161,7 @@
 				  <td>Ikeda Tomonori</td>
 				  <td>325</td>
 				  <td>075-753-3867</td>
-				  <td>ikeda*</td>
+				  <td>tomonori*</td>
 				  <td>低エネルギーγ線</td>
 				</tr>
 
