--- a/underg.html
+++ b/underg.html
@@ -41,13 +41,16 @@
       <div class="topicsBox">
 	<strong>研究紹介</strong>
 	<a href="lorentz" title="">ローレンツ祭紹介</a>
+	 <!--
 	<br>
 	  <a href="gakubu/Xintro2019.pdf" title="">新M1向けグループ紹介（X線）</a>
 	<br>
 	  <a href="gakubu/MeVintro2019.pdf" title="">新M1向けグループ紹介（低エネルギーγ線）</a>
 	<br>
-	  <a href="gakubu/TeVintro2019.pdf" title="">新M1向けグループ紹介（高エネルギーγ線）</a>
+	  <a href="gakubu/TeVintro2019.pdf" title="">新M1向けグループ紹介（高エネルギーγ線）</a
+-->
       </div>
+
       <div class="topicsBox">
 	<strong>課題研究 P6</strong>
 	<a href="gakubu/P6.html" title="">課題研究 P6</a>
