--- a/ob_member.html
+++ b/ob_member.html
@@ -51,12 +51,55 @@
 		<tr>
 		  <td>2019</td>
 		  <td>水村 好貴</td>
-		  <td>Yoshitaka Mizumura</td>
+		  <td>Mizumura Yoshitaka</td>
 		  <td>γ 線</td>
-		  <td>特定研究員</td>
+		  <td>PD</td>
 		  <td>ISAS/JAXA 助教</td>
+		  <th>ISAS/JAXA 助教</th>
+		</tr>
+
+		<tr>
+		  <td>2019</td>
+		  <td>竹村 泰斗</td>
+		  <td>Takemura Taito</td>
+		  <td>γ 線</td>
+		  <td>D3</td>
+		  <td></td>
 		  <th></th>
 		</tr>
+
+
+		<tr>
+		  <td>2019</td>
+		  <td>中村 優太</td>
+		  <td>Nakamura Yuta</td>
+		  <td>γ 線</td>
+		  <td>D2</td>
+		  <td></td>
+		  <th></th>
+		</tr>
+
+
+		<tr>
+		  <td>2019</td>
+		  <td>梶原 侑貴</td>
+		  <td>Kajiwara Yuki</td>
+		  <td>γ 線</td>
+		  <td>M2</td>
+		  <td></td>
+		  <th></th>
+		</tr>
+
+		<tr>
+		  <td>2019</td>
+		  <td>今川 要</td>
+		  <td>Imagawa Kaname</td>
+		  <td>γ 線</td>
+		  <td>M1</td>
+		  <td></td>
+		  <th></th>
+		</tr>
+
 
 		<tr>
 		  <td>　</td>
@@ -65,7 +108,7 @@
 		<tr>
 		  <td>2018</td>
 		  <td>増田 周</td>
-		  <td>Shu Masuda</td>
+		  <td>Masuda Shu</td>
 		  <td>γ 線</td>
 		  <td>D3</td>
 		  <td>総合電機メーカー</td>
@@ -75,7 +118,7 @@
 		<tr>
 		  <td>2018</td>
 		  <td>小野坂 健</td>
-		  <td>Ken Onozaka</td>
+		  <td>Onozaka Ken</td>
 		  <td>γ 線</td>
 		  <td>M2</td>
 		  <td>電気機器メーカー</td>
@@ -85,7 +128,7 @@
 		<tr>
 		  <td>2018</td>
 		  <td>奥野 智行</td>
-		  <td>Tomoyuki Okuno</td>
+		  <td>Okuno Tomoyuki</td>
 		  <td>X 線</td>
 		  <td>M2</td>
 		  <td>総合電機メーカー</td>
@@ -95,7 +138,7 @@
 		<tr>
 		  <td>2018</td>
 		  <td>齋藤 要</td>
-		  <td>Kaname Saito</td>
+		  <td>Saito Kaname</td>
 		  <td>γ 線</td>
 		  <td>M2</td>
 		  <td></td>
@@ -105,7 +148,7 @@
 		<tr>
 		  <td>2018</td>
 		  <td>原田 颯大</td>
-		  <td>Sodai Harada</td>
+		  <td>Harada Sodai</td>
 		  <td>X 線</td>
 		  <td>M2</td>
 		  <td>総合電機メーカー</td>
@@ -115,7 +158,7 @@
 		<tr>
 		  <td>2018</td>
 		  <td>平子 丈</td>
-		  <td>Joe Hirako</td>
+		  <td>Hirako Joe</td>
 		  <td>γ 線</td>
 		  <td>M2</td>
 		  <td>経営コンサルティング企業</td>
