change news of Lorentz in top page

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <span style="color:red">2020年6月13日(土)に行われるローレンツ祭では研究室紹介の時間以外でも質問を受け付けています。</span><br>
           以下のアドレスからご参加ください。<br>
           <a href="https://kyoto-u-edu.zoom.us/j/91973460567"> https://kyoto-u-edu.zoom.us/j/91973460567</a><br>
-          ミーティングID:919 7346 0567<br>
-          パスワード:OLF20yzh
+          ミーティングID:919 7346 0567
         </h2>
 	    
 	    <div class="ProjectNewBox">
