delete news of Lorentz in top page

--- a/index.html
+++ b/index.html
@@ -42,11 +42,7 @@
 	<div id="mainContents" class="clearfix">
 	  <h2> 物理の最も基本的な問い、時空・物質の創生と進展の解明には、深宇宙観測や極限物理天体観測（ブラックホール、中性子星等、超新星爆発等）が最重要です。当グループは、このような極限天体が主に放射する高エネルギー光子であるX線・γ線を新技術を用いて新たな視点での観測を推進し、新しい宇宙像の創出を目指しています。
 	    <br>
-	      主なプロジェクトとして、以下の高エネルギー光子領域で測定技術開発と観測実験を推進しています。<br>
-        <span style="color:red">2020年6月13日(土)に行われるローレンツ祭では研究室紹介の時間以外でも質問を受け付けています。</span><br>
-          以下のアドレスからご参加ください。<br>
-          <a href="https://kyoto-u-edu.zoom.us/j/91973460567"> https://kyoto-u-edu.zoom.us/j/91973460567</a><br>
-          ミーティングID:919 7346 0567
+	      主なプロジェクトとして、以下の高エネルギー光子領域で測定技術開発と観測実験を推進しています。
         </h2>
 	    
 	    <div class="ProjectNewBox">
