--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
 		       <strong><FONT size="4">新着情報</FONT></strong>
 		       
 		       <dl>
-
+			 <dt>2020.06.22</dt>
+			 <dd>ガンマ線天文台CTA大口径望遠鏡１号機がかに星雲パルサーからのガンマ線検出に成功しました。<a href="https://www.cta-observatory.org/lst1-detects-vhe-emission-from-crab-pulsar/">CTA HP</a></dd>
+			 
 			 <dt>2020.02.28</dt>
 			 <dd>FAST実験にて、米国ユタ州に設置した望遠鏡3台での極高エネルギー宇宙線の観測に成功しました。 <a href="http://www.kyoto-u.ac.jp/ja/research/research_results/2019/200123_3.html">プレスリリース</a></dd>
 
