--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
 		       <strong><FONT size="4">新着情報</FONT></strong>
 		       
 		       <dl>
+			 <dt>2020.07.28</dt>
+			 <dd>TA実験にて、極高エネルギー宇宙線の大角度依存性を示唆する結果が得られました。<a href="http://www.kyoto-u.ac.jp/ja/research/research_results/2020/200727_1.html">プレスリリース</a> <a href="http://www.kyoto-u.ac.jp/ja/research/research_results/2020/documents/200727_1/01.pdf">研究詳細</a></dd>
+
 			 <dt>2020.06.22</dt>
 			 <dd>ガンマ線天文台CTA大口径望遠鏡１号機がかに星雲パルサーからのガンマ線検出に成功しました。<a href="https://www.cta-observatory.org/lst1-detects-vhe-emission-from-crab-pulsar/">CTA HP</a></dd>
 			 
