edit the author list

--- a/X/members.html
+++ b/X/members.html
@@ -94,29 +94,18 @@
     <div class="details_frame"> <img src="image/okon.jpg" alt="真鍋俊也" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>D2</p>
+            <p>D3</p>
            <h4>居室</h4>
             <p>340</p>
             <h4>電話番号</h4>
             <p>075-753-4241</p>
         </div>
         </div>
-    <h3>井戸垣 洋志（Idogaki Hiroshi）</h3>
-    <div class="details_frame"> <img src="image/idogaki.jpg" alt="真鍋俊也" class="fl">
-        <div class="staffdetails">
-            <h4>学年</h4>
-            <p>M2</p>
-          <h4>居室</h4>
-            <p>325</p>
-            <h4>電話番号</h4>
-            <p>075-753-3867</p>
-        </div>
-        </div>
     <h3>天野 雄輝 (Amano Yuki)</h3>
     <div class="details_frame"> <img src="image/2018_Amano.jpg" alt="no image" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M2</p>
+            <p>D1</p>
           <h4>居室</h4>
             <p>336</p>
             <h4>電話番号</h4>
@@ -127,18 +116,29 @@
     <div class="details_frame"> <img src="image/2018_Kayama.jpg" alt="no image" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M2</p>
+            <p>D1</p>
           <h4>居室</h4>
             <p>338</p>
             <h4>電話番号</h4>
             <p>075-753-3827</p>
         </div>
         </div>
+    <h3>井戸垣 洋志（Idogaki Hiroshi）</h3>
+    <div class="details_frame"> <img src="image/idogaki.jpg" alt="no image" class="fl">
+        <div class="staffdetails">
+            <h4>学年</h4>
+            <p>M2</p>
+          <h4>居室</h4>
+            <p>325</p>
+            <h4>電話番号</h4>
+            <p>075-753-3867</p>
+        </div>
+        </div>
     <h3>児玉 涼太 (Kodama Ryota)</h3>
     <div class="details_frame"> <img src="image/2019_Kodama.jpg" alt="no image" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M1</p>
+            <p>M2</p>
           <h4>居室</h4>
             <p>338</p>
             <h4>電話番号</h4>
@@ -149,11 +149,22 @@
     <div class="details_frame"> <img src="image/2019_Matsuda.jpg" alt="no image" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M1</p>
+            <p>M2</p>
           <h4>居室</h4>
             <p>336</p>
             <h4>電話番号</h4>
             <p>075-753-3843</p>
+        </div>
+        </div>
+    <h3>小柴 鷹介（Koshiba Yosuke）</h3>
+    <div class="details_frame"> <img src="image/2020_Koshiba.jpg" alt="no image" class="fl">
+        <div class="staffdetails">
+            <h4>学年</h4>
+            <p>M1</p>
+          <h4>居室</h4>
+            <p>340</p>
+            <h4>電話番号</h4>
+            <p>075-753-4241</p>
         </div>
         </div>
 
