--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
 		       
 
 		    <dl>
+		      <dd>R. Kodama, T. Tsuru, T. Tanaka, H. Uchida, K. Kayama, Y. Amano et al., <a href="https://arxiv.org/abs/2009.14034">Low-Energy X-ray Performance of SOI Pixel Sensors for Astronomy, "XRPIX"</a>, NIM A (2020)</dd>
+		      
 		      <dd>T. Tanaka, H. Uchida, H. Sano, T. Tsuru, <a href="https://arxiv.org/abs/2008.05581">Shock-Cloud Interaction in the Southwestern Rim of RX J1713.7−3946 Evidenced by Chandra X-ray Observations</a>, ApJL (2020)</dd>
 
 		      <dd>H. Uchida, T. Tanaka, Y. Amano, H. Okon, T. Tsuru et al., <a href="https://arxiv.org/abs/2007.07608">Optical Blocking Performance of CCDs Developed for the X-ray Astronomy Satellite XRISM</a>, NIMA (2020)</dd>
