--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 		       
 
 		    <dl>
-		      <dd>A. Taketa, T. Tsuru, T. Tanaka, H. Uchida, K. Kayama et al., <a href="https://iopscience.iop.org/article/10.1088/1748-0221/15/11/P11001/pdf">Spectroscopic performance improvement of SOI pixel detector for X-ray astronomy by introducing Double-SOI structure</a>, JINST (2020)</dd>
+		      <dd>A. Takeda, T. Tsuru, T. Tanaka, H. Uchida, K. Kayama et al., <a href="https://iopscience.iop.org/article/10.1088/1748-0221/15/11/P11001/pdf">Spectroscopic performance improvement of SOI pixel detector for X-ray astronomy by introducing Double-SOI structure</a>, JINST (2020)</dd>
 
 		      <dd>R. Kodama, T. Tsuru, T. Tanaka, H. Uchida, K. Kayama, Y. Amano et al., <a href="https://arxiv.org/abs/2009.14034">Low-Energy X-ray Performance of SOI Pixel Sensors for Astronomy, "XRPIX"</a>, NIM A (2020)</dd>
 		      
