add a new paper

--- a/index.html
+++ b/index.html
@@ -318,6 +318,8 @@
 		       
 
 		    <dl>
+
+		      <dd>T. Tanaka, H. Uchida et al., <a href="https://arxiv.org/abs/2012.13622">Rapid Deceleration of Blast Waves Witnessed in Tycho's Supernova Remnant</a>, ApJL (2021)</dd>
 		      
 		      <dd>V. Acciari, S. Nozaki, MAGIC collaboration et al., <a href="https://arxiv.org/abs/2012.11380">VHE gamma-ray detection of FSRQ QSO B1420+326 and modeling of its enhanced broadband state in 2020</a>, A&A (2020)</dd>
 
