--- a/album.html
+++ b/album.html
@@ -36,6 +36,15 @@
       
       <div id="mainContents" class="clearfix">
 
+	<h2><font size=5> 2020年度 </font></h2>
+
+	<div class="fig_box">
+	  <a href="https://photos.app.goo.gl/XCmU2NZb4jVT7Lju8">
+	  <img src="https://lh3.googleusercontent.com/2SBJ3FAE2HSDuQZasAjpMdP_fncdybxztNl_XGI4z0Va9ZOccW1dRFiI2A6ngasM4h-HgXqm7K6K7tAE2Kk0CG1ge9wb4_H9ew5PDFp41ttstmKidZSDqcFCGd01AVfBXXGpS1FmwA=w600-h315-p-k" alt="田中さん、尾近さん、児玉さんを送る会と集合写真" /> </a> 
+	  <h3>2021年2月24日</h3>
+	  <h3>田中さん、尾近さん、児玉さんを送る会＆集合写真</h3>
+	</div>
+
 	<h2><font size=5> 2019年度 </font></h2>
 
 	<div class="fig_box">
