add paper and add p6presen

--- a/thesis.html
+++ b/thesis.html
@@ -75,6 +75,13 @@
 				</tr>
 
 				<tr>
+					<th>2020</th>
+					<th>尾近 洸行</th>
+					<th>X-Ray Study on Supernova Remnants Interacting with Dense Clouds</th>
+					<th><a href="d_ron/okonD.pdf">PDF</a></th>	
+				</tr>
+
+				<tr>
 					<th>2017</th>
 					<th>松村 英晃</th>
 					<th>Investigation of the Formation Process of Recombining Plasmas in the Galactic Supernova Remnants with the Suzaku X-Ray Observatory</th>
@@ -414,6 +421,13 @@
 					<th width="9.6%"><B><FONT size= "2">名前</FONT></B></th>	    
 					<th width="73%"><B><FONT size= "2">タイトル</FONT></B></th>
 					<th width="20%"><B><FONT size= "2">ダウンロード</FONT></B></th>
+				</tr>
+
+				<tr>
+				  <th>2020</th>
+				  <th>児玉 涼太</th>
+				  <th>次世代X線天文用SOIピクセル検出器の軟X線性能及びノイズ性能の定量的研究</th>
+				  <th><a href="m_ron/kodamaM.pdf">PDF</a></th>
 				</tr>
 
 				<tr>
