--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@
 		       <strong><FONT size="4">新着情報</FONT></strong>
 		       
 		       <dl>
+             <dt>2021.03.08</dt>
+			 <dd>第7回高エネルギー宇宙物理連絡会(高宇連)にて、D3の尾近洸行さんが博士論文賞を受賞しました。
+			 </dd>       
+                   
 			 <dt>2021.01.08</dt>
 			 <dd>田中孝明 助教らが、ティコの超新星残骸の衝撃波の急激な減速を発見しました。<a href="https://www.kyoto-u.ac.jp/ja/research-news/2021-01-08-4">プレスリリース</a> <a href="https://cdn.tv-osaka.co.jp/yasashii/news/?p=22881&_ga=2.53263272.1254843999.1610429444-2007105546.1610017051">テレビ大阪</a>
 			 </dd>
