--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 		       
 		       <dl>
              <dt>2021.03.08</dt>
-			 <dd>第7回高エネルギー宇宙物理連絡会(高宇連)にて、D3の尾近洸行さんが博士論文賞を受賞しました。
+			 <dd>第20回高宇連研究会にて、D3の尾近洸行さんが第7回高宇連博士論文賞を受賞しました。
 			 </dd>       
                    
 			 <dt>2021.01.08</dt>
