--- a/thesis.html
+++ b/thesis.html
@@ -429,6 +429,13 @@
 				  <th>次世代X線天文用SOIピクセル検出器の軟X線性能及びノイズ性能の定量的研究</th>
 				  <th><a href="m_ron/kodamaM.pdf">PDF</a></th>
 				</tr>
+                  
+                <tr>
+				  <th>2020</th>
+				  <th>松田 真宗</th>
+				  <th>超新星残骸Tychoにおける熱的放射と非熱的放射の時間変動観測研究</th>
+				  <th><a href="m_ron/matsudaM.pdf">PDF</a></th>
+				</tr>
 
 				<tr>
 				  <th>2019</th>
