--- a/album.html
+++ b/album.html
@@ -39,6 +39,13 @@
 	<h2><font size=5> 2020年度 </font></h2>
 
 	<div class="fig_box">
+	  <a href="https://photos.app.goo.gl/CmKJw16vooBteQh97">
+	  <img src="https://lh3.googleusercontent.com/VyZqw2YhWggajo2S06BHvPNDSA8MGkE0scDa8AKge7aYMOgLFBxnmHw7FlmywGNWJvFO8FZWDZaHSvpnfRSs6p3oXcwPwf7n8xzemb4gmvlg_J2GRRs_SP6mYYVtT-FygUyNgmIBnQ=w600-h315-p-k" alt="田中さん送別会" /> </a> 
+	  <h3>2021年3月19日</h3>
+	  <h3>田中さん送別会</h3>
+	</div>
+          
+	<div class="fig_box">
 	  <a href="https://photos.app.goo.gl/XCmU2NZb4jVT7Lju8">
 	  <img src="https://lh3.googleusercontent.com/2SBJ3FAE2HSDuQZasAjpMdP_fncdybxztNl_XGI4z0Va9ZOccW1dRFiI2A6ngasM4h-HgXqm7K6K7tAE2Kk0CG1ge9wb4_H9ew5PDFp41ttstmKidZSDqcFCGd01AVfBXXGpS1FmwA=w600-h315-p-k" alt="田中さん、尾近さん、児玉さんを送る会と集合写真" /> </a> 
 	  <h3>2021年2月24日</h3>
