--- a/album.html
+++ b/album.html
@@ -38,6 +38,13 @@
 
 	<h2><font size=5> 2020年度 </font></h2>
 
+    <div class="fig_box">
+	  <a href="https://photos.app.goo.gl/hdJmqRD8fRfK4HMA8">
+	  <img src="https://lh3.googleusercontent.com/_zwcI2RAMbuEK8xGlepl_JqO3NuVx7ox-ySQWuloI-mAB3BCVDyb9oI72Z63XFNCF3FcePx2FKBxRDXnI10IYS1rGwBBmGkZNpycIrnq0N2nQqmNl2o1aRtpAkiTws86AWemL7uc-w=w600-h315-p-k" alt="2020年度学位授与式" /> </a> 
+	  <h3>2021年3月24日</h3>
+	  <h3>2020年度学位授与式</h3>
+	</div>      
+          
 	<div class="fig_box">
 	  <a href="https://photos.app.goo.gl/CmKJw16vooBteQh97">
 	  <img src="https://lh3.googleusercontent.com/VyZqw2YhWggajo2S06BHvPNDSA8MGkE0scDa8AKge7aYMOgLFBxnmHw7FlmywGNWJvFO8FZWDZaHSvpnfRSs6p3oXcwPwf7n8xzemb4gmvlg_J2GRRs_SP6mYYVtT-FygUyNgmIBnQ=w600-h315-p-k" alt="田中さん送別会" /> </a> 
