--- a/ob_member.html
+++ b/ob_member.html
@@ -45,7 +45,7 @@
                   <th width="80"><B><FONT size= "2">所属</FONT></B></th>
                   <th width="100"><B><FONT size= "2">転出時</FONT></B></th>
                   <th width="180"><B><FONT size= "2">転出先</FONT></B></th>
-                  <th width="180"><B><FONT size= "2">現職</FONT> <font size= "1.5">(研究職のみ, 2016年更新)</font></B></th>
+                  <th width="180"><B><FONT size= "2">現職</FONT> <font size= "1.5">(研究職のみ, 2021年4月更新)</font></B></th>
                 </tr>
 
 		<tr>
@@ -314,12 +314,12 @@
 
 				<tr>
 					<td>2016</td>
-					<td>斎藤 隆之</td>
+					<td>齋藤 隆之</td>
 					<td>Saito Takayuki</td>
 					<td>γ線</td>
 					<td>特任助教</td>
-					<td>ICRR 助教</td>
-					<th>ICRR 助教</th>
+					<td>東京大学ICRR 助教</td>
+					<th>東京大学ICRR 助教</th>
 				</tr>
 
 				<tr>
@@ -895,7 +895,7 @@
 					<td>γ線</td>
 					<td>D3 (学振)</td>
 					<td>東京工業大学 PD</td>
-					<th>山形大学 准教授</th>
+					<th>山形大学 教授</th>
 				</tr> 
 				
 				<tr>
@@ -992,8 +992,8 @@
 					<td>Sekiya Hiroyuki</td>
 					<td>γ線</td>
 					<td>PD</td>
-					<td>ICRR 助教</td>
-					<th>ICRR 准教授</th>
+					<td>東京大学ICRR 助教</td>
+					<th>東京大学ICRR 准教授</th>
 				</tr>			
 
 				<tr>
@@ -1036,8 +1036,8 @@
 					<td>Takeda Atsushi</td>
 					<td>γ線</td>
 					<td>PD</td>
-					<td>ICRR 助教</td>
-					<th>ICRR 准教授</th>
+					<td>東京大学ICRR 助教</td>
+					<th>東京大学ICRR 准教授</th>
 				</tr>	
 				
 				<tr>
