--- a/ob_member.html
+++ b/ob_member.html
@@ -422,8 +422,8 @@
 					<td>Tomono Dai</td>
 					<td>γ線</td>
 					<td>PD</td>
-					<td>RCNP 研究員</td>
-					<th>RCNP 研究員</th>
+					<td>大阪大学RCNP 研究員</td>
+					<th>大阪大学RCNP 特任助教</th>
 				</tr> 
 
 				<tr>
@@ -627,7 +627,7 @@
 					<td>青野 正裕</td>
 					<td>Aono Masahiro</td>
 					<td>γ線</td>
-					<td>D3</td>
+					<td>M2</td>
 					<td>　</td>
 					<th>　</th>
 				</tr> 	
@@ -821,7 +821,7 @@
 					<td>γ線</td>
 					<td>D3</td>
 					<td>　</td>
-					<th>　</th>
+					<th>産業技術総合研究所 主任研究員</th>
 				</tr> 
 				
 				<tr>
